<resources>
    <string name="app_name">CustoViagem</string>
    <string name="distancia">Distancia</string>
    <string name="total_de_quilometros">Total de Quilometros</string>
    <string name="preço">Preço</string>
    <string name="preço_por_litro">Preço por litro</string>
    <string name="autonomia">Autonomia</string>
    <string name="km_por_litro">Km por litro</string>
    <string name="seu_gasto_total_ser_de">Seu Gasto Total será de:</string>
    <string name="valorGasto">R$ 0</string>
</resources>