<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:padding="21dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6DB4BD"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit_distance"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="numberDecimal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/distancia"/>

    <TextView
        android:id="@+id/text_total_kilometers"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/edit_distance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/total_de_quilometros"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

  <EditText
      android:id="@+id/edit_price"
      android:layout_marginTop="12dp"
      app:layout_constraintTop_toBottomOf="@id/text_total_kilometers"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:inputType="numberDecimal"
      android:hint="@string/preço"
      android:layout_width="0dp"
      android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/price_liter"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/edit_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/preço_por_litro"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/edit_autonomy"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/price_liter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/autonomia"
        android:inputType="numberDecimal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text_perLiter"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/edit_autonomy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/km_por_litro"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text_totalExpense"
        android:layout_marginTop="21dp"
        app:layout_constraintTop_toBottomOf="@id/text_perLiter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/seu_gasto_total_ser_de"
        android:textAllCaps="true"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text_coin"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/text_totalExpense"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="28sp"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/button_calculate"
        android:layout_marginTop="21dp"
        app:layout_constraintTop_toBottomOf="@id/text_coin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="Calcular"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>



</androidx.constraintlayout.widget.ConstraintLayout>